--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kotlin.code.style=official
 
 
 GROUP=com.gabrielittner.binder
-VERSION_NAME=0.1.0
+VERSION_NAME=0.2.0-SNAPSHOT
 
 POM_DESCRIPTION=Binder
 
