--- a/connect-rx/src/main/AndroidManifest.xml
+++ b/connect-rx/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.gabrielittner.binder.connectors" />
+<manifest package="com.gabrielittner.binder.connect.rx" />
