--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -11,7 +11,10 @@ android {
 }
 
 dependencies {
-    api "io.reactivex.rxjava2:rxjava:2.2.12"
+    api project(":binder")
+    api "androidx.lifecycle:lifecycle-livedata-core:2.0.0"
+
+    api "androidx.lifecycle:lifecycle-runtime:2.0.0"
+    api "androidx.fragment:fragment:1.0.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
-    implementation "androidx.fragment:fragment:1.0.0"
 }
