--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':binder', ':binder-delegation', ':binder-list', ':connect-base', ':connect-livedata', ':connect-rx'
+include ':binder', ':binder-delegation', ':binder-list', ':connect', ':connect-rx'
