--- a/gradle.properties
+++ b/gradle.properties
@@ -22,15 +22,15 @@ kotlin.code.style=official
 
 
 
-GROUP=com.gabrielittner.binder
+GROUP=com.gabrielittner.renderer
 VERSION_NAME=0.2.0
 
-POM_DESCRIPTION=Binder
+POM_DESCRIPTION=Renderer
 
-POM_URL=https://github.com/gabrielittner/binder/
-POM_SCM_URL=https://github.com/gabrielittner/binder/
-POM_SCM_CONNECTION=scm:git:git://github.com/gabrielittner/binder.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/gabrielittner/binder.git
+POM_URL=https://github.com/gabrielittner/renderer/
+POM_SCM_URL=https://github.com/gabrielittner/renderer/
+POM_SCM_CONNECTION=scm:git:git://github.com/gabrielittner/renderer.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/gabrielittner/renderer.git
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
