--- a/renderer-list/build.gradle
+++ b/renderer-list/build.gradle
@@ -12,9 +12,6 @@ android {
 
 dependencies {
     api project(":renderer")
-    api "androidx.lifecycle:lifecycle-livedata-core:2.0.0"
-
-    api "androidx.lifecycle:lifecycle-runtime:2.0.0"
-    api "androidx.fragment:fragment:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
+    api "androidx.recyclerview:recyclerview:1.0.0"
+    api 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.2.0'
 }
