--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':renderer', ':renderer-delegation', ':renderer-list', ':connect', ':connect-livedata', ':connect-livedata-rx'
+include ':renderer', ':renderer-delegation', ':renderer-list'
+include ':connect', ':connect-livedata', ':connect-livedata-rx', ':connect-rx'
