--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -13,5 +13,5 @@ android {
 dependencies {
     api project(":renderer")
 
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
+    api "androidx.lifecycle:lifecycle-common-java8:2.0.0"
 }
