--- a/connect-livedata/build.gradle
+++ b/connect-livedata/build.gradle
@@ -12,5 +12,5 @@ android {
 
 dependencies {
     api project(":connect")
-    api "androidx.lifecycle:lifecycle-livedata-core:2.0.0"
+    api "androidx.lifecycle:lifecycle-livedata-core-ktx:2.1.0"
 }
