--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -12,6 +12,6 @@ android {
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "io.reactivex.rxjava2:rxjava:2.2.12"
-    api "androidx.fragment:fragment:1.1.0"
+    api "io.reactivex.rxjava2:rxjava:2.2.15"
+    api "androidx.fragment:fragment-ktx:1.1.0"
 }
