--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kotlin.code.style=official
 
 
 GROUP=com.gabrielittner.renderer
-VERSION_NAME=0.6.0
+VERSION_NAME=0.7.0-SNAPSHOT
 
 POM_DESCRIPTION=Renderer
 
