cleanup and add Any as bound for State and Action

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':renderer', ':renderer-delegation', ':renderer-list'
+include ':renderer', ':renderer-list'
 include ':connect', ':connect-livedata', ':connect-livedata-rx', ':connect-rx'
