--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -12,7 +12,8 @@ android {
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "io.reactivex.rxjava2:rxjava:2.2.20"
-    api "androidx.fragment:fragment-ktx:1.2.5"
-    api "androidx.databinding:viewbinding:4.1.2"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.5.0"
+    api "io.reactivex.rxjava2:rxjava:2.2.21"
+    api "androidx.fragment:fragment-ktx:1.3.4"
+    api "androidx.databinding:viewbinding:4.2.1"
 }
