--- a/connect-livedata/build.gradle
+++ b/connect-livedata/build.gradle
@@ -11,6 +11,7 @@ android {
 }
 
 dependencies {
-    api project(":connect")
+    api project(":renderer")
+    api "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     api "androidx.lifecycle:lifecycle-livedata-core-ktx:2.3.1"
 }
