--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 include ':renderer', ':renderer-list'
-include ':connect', ':connect-livedata', ':connect-livedata-rx'
+include ':connect-livedata', ':connect-livedata-rx'
