--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kotlin.code.style=official
 
 
 GROUP=com.gabrielittner.renderer
-VERSION_NAME=0.9.0-SNAPSHOT
+VERSION_NAME=0.9.0
 
 POM_DESCRIPTION=Renderer
 
