Prepare next development version.

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kotlin.code.style=official
 
 
 GROUP=com.gabrielittner.renderer
-VERSION_NAME=0.10.1
+VERSION_NAME=0.11.0-SNAPSHOT
 
 POM_DESCRIPTION=Renderer
 
