remove StateMachine implementations

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,2 @@
 include ':renderer', ':renderer-list'
-include ':connect-livedata', ':connect-livedata-rx'
-include ':connect-flow', ':connect-flow-rx'
+include ':connect'
