--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,9 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 
+android.disableAutomaticComponentCreation=true
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
 
 GROUP=com.gabrielittner.renderer
 VERSION_NAME=0.11.0-SNAPSHOT
