--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: "com.android.library"
-apply plugin: "org.jetbrains.kotlin.android"
-apply plugin: 'org.jetbrains.dokka'
-apply plugin: "com.vanniktech.maven.publish"
+plugins {
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.dokka)
+    alias(libs.plugins.publish)
+}
 
 android {
     compileSdkVersion 29
@@ -12,9 +14,8 @@ android {
 }
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.5.0"
-    api "io.reactivex.rxjava2:rxjava:2.2.21"
-    api "androidx.fragment:fragment-ktx:1.3.4"
-    api "androidx.databinding:viewbinding:4.2.1"
+    api libs.coroutines.rx2
+    api libs.rxjava
+    api libs.androidx.fragment
+    api libs.androidx.viewbinding
 }
