--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -14,10 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install JDK 8
+      - name: Install JDK
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: zulu
+          java-version: 11
 
       - name: Install Android SDK
         run: ./.github/android-sdk.sh
