--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,7 +4,7 @@
     "config:base",
     ":disableRateLimiting"
   ],
-  automerge: true,
+  automerge: false,
   platformAutomerge: true,
   platformCommit: true,
   assignAutomerge: true,
