--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ android-gradle = "7.2.2"
 android-min = "21"
 android-compile = "29"
 androidx-activity = "1.5.1"
+androidx-compose-compiler = "1.3.0"
+androidx-compose-runtime = "1.2.1"
 androidx-lifecycle = "2.5.1"
 androidx-fragment = "1.4.0"
 androidx-recyclerview = "1.2.1"
@@ -17,13 +19,15 @@ adapterdelegates = "4.3.2"
 rxjava = "2.2.21"
 
 publish = "0.21.0"
-dokka = "1.7.10"
+dokka = "1.6.10"
 
 [libraries]
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-rx2 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-rx2", version.ref = "coroutines" }
 
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
+androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-compose-runtime" }
+androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-runtime" }
 androidx-lifecycle-common = { module = "androidx.lifecycle:lifecycle-common", version.ref = "androidx-lifecycle" }
 androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "androidx-fragment" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
