--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -6,16 +6,27 @@ plugins {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion libs.versions.android.compile.get().toInteger()
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion libs.versions.android.min.get().toInteger()
+    }
+
+    buildFeatures {
+        compose = true
+        buildConfig = false
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = libs.versions.androidx.compose.compiler.get()
     }
 }
 
 dependencies {
     api libs.coroutines.rx2
     api libs.rxjava
+    api libs.androidx.compose.runtime
+    api libs.androidx.compose.ui
     api libs.androidx.fragment
     api libs.androidx.viewbinding
 }
