--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ SONATYPE_HOST=DEFAULT
 RELEASE_SIGNING_ENABLED=true
 
 GROUP=com.gabrielittner.renderer
-VERSION_NAME=0.12.0
+VERSION_NAME=0.13.0-SNAPSHOT
 
 POM_DESCRIPTION=Renderer
 
