--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - '**'
+  pull_request:
 
 jobs:
   build:
@@ -26,6 +30,8 @@ jobs:
 
       - name: Install Android SDK
         run: ./.github/android-sdk.sh
+
+      - uses: gradle/gradle-build-action@v2
 
       - name: Build with Gradle
         run: ./gradlew build --stacktrace
