--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -3,7 +3,9 @@ name: Publish Snapshot
 on:
   push:
     branches:
-      - main
+      - '**'
+    tags:
+      - '**'
 
 jobs:
   publish:
@@ -13,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install JDK
         uses: actions/setup-java@v3
@@ -23,15 +27,23 @@ jobs:
       - name: Install Android SDK
         run: ./.github/android-sdk.sh
 
-      - name: Retrieve version
+      - name: Set version for main
+        if: ${{ github.ref_name == 'main' }}
         run: |
-          echo "VERSION_NAME=$(cat gradle.properties | grep -w "VERSION_NAME" | cut -d'=' -f2)" >> $GITHUB_ENV
+          echo "ORG_GRADLE_PROJECT_VERSION_NAME=$(git describe --tags --abbrev=0 | awk -F. '/[0-9]+\./{$NF++;print}' OFS=.)-SNAPSHOT" >> $GITHUB_ENV
 
-      - name: Publish snapshot
-        run: ./gradlew publish --no-daemon --no-parallel
-        if: endsWith(env.VERSION_NAME, '-SNAPSHOT')
+      - name: Set version for branch
+        if: ${{ github.ref_name != 'main' }}
+        run: |
+          echo "ORG_GRADLE_PROJECT_VERSION_NAME=${{ github.ref_name }}-SNAPSHOT" | sed 's#/#-#g' >> $GITHUB_ENV
+
+      - uses: gradle/gradle-build-action@v2
+
+      - name: Publish
+        run: ./gradlew publish
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.MAVEN_SIGNING_PRIVATE_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.MAVEN_SIGNING_PASSWORD }}
+        if: "${{ env.ORG_GRADLE_PROJECT_mavenCentralUsername != '' }}"
