run only in original repo

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -11,6 +11,7 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
+    if: github.repository == 'gabrielittner/renderer'
 
     steps:
       - name: Checkout
