--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -14,6 +14,7 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
+    if: github.repository == 'gabrielittner/renderer'
 
     permissions:
       contents: read
