--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -9,6 +9,7 @@ jobs:
   publish:
 
     runs-on: ubuntu-latest
+    if: github.repository == 'gabrielittner/renderer'
 
     steps:
       - name: Checkout
