--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,36 +2,21 @@
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
   extends: [
     "config:base",
-    ":disableRateLimiting"
+    ":disableRateLimiting",
+    ":semanticCommitsDisabled"
   ],
-  automerge: false,
+  automerge: true,
   platformAutomerge: true,
   platformCommit: true,
   assignAutomerge: true,
-  rebaseWhen: "conflict",
+  reviewers: ["gabrielittner"],
+  rebaseWhen: "conflicted",
   prBodyTemplate: "{{{header}}}{{{table}}}{{{notes}}}{{{changelogs}}}{{{controls}}}{{{footer}}}",
   prBodyColumns: ["Package", "Change", "Age"],
   prFooter: "🔕 Ignore: Close this PR and you won't be reminded about these updates again.",
   ignoreDeps: [
   ],
   packageRules: [
-    //
-    //
-    // CUSTOM CHANGELOGS
-    //
-    //
-    {
-      matchPackagePatterns: [
-          "^androidx.test"
-      ],
-      prBodyNotes: "[Changelog](https://developer.android.com/jetpack/androidx/releases/test)"
-    },
-    {
-      matchPackagePatterns: [
-        "^androidx"
-      ],
-      prBodyNotes: "[Changelog]({{{homepage}}})"
-    },
     {
       matchPackageNames: [
         "gradle"
