--- a/renderer/build.gradle
+++ b/renderer/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 
 android {
+    namespace = "com.gabrielittner.renderer"
     compileSdkVersion libs.versions.android.compile.get().toInteger()
 
     defaultConfig {
