--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -22,6 +22,24 @@
         "gradle"
       ],
       prBodyNotes: "[Changelog](https://docs.gradle.org/{{{newVersion}}}/release-notes.html)"
+    },
+    {
+      matchPackagePatterns: [
+        "^org.jetbrains.kotlin",
+        "com.google.devtools.ksp",
+        "org.jetbrains.compose",
+        "androidx.compose.compiler"
+      ],
+      groupName: "Kotlin and Compose Compiler"
+    },
+    {
+      matchPackagePatterns: [
+        "androidx.compose.runtime",
+        "androidx.compose.ui",
+        "androidx.compose.foundation",
+        "androidx.compose.material",
+      ],
+      groupName: "Compose"
     }
   ]
 }
