--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ androidx-lifecycle = "2.6.1"
 androidx-fragment = "1.6.0"
 androidx-recyclerview = "1.3.0"
 
-mad = "0.14.1"
+khonshu = "0.15.0"
 
 adapterdelegates = "4.3.2"
 
@@ -35,7 +35,7 @@ androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidx-recyclerview" }
 androidx-viewbinding = { module = "androidx.databinding:viewbinding", version.ref = "android-gradle" }
 
-mad-statemachine = { module = "com.freeletics.mad:state-machine", version.ref = "mad" }
+khonshu-statemachine = { module = "com.freeletics.khonshu:state-machine", version.ref = "khonshu" }
 
 adapterdelegates = { module = "com.hannesdorfmann:adapterdelegates4-kotlin-dsl", version.ref = "adapterdelegates" }
 
