--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v2
-
       - name: Install JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v4
         with:
@@ -27,7 +24,9 @@ jobs:
       - name: Install Android SDK
         run: ./.github/android-sdk.sh
 
-      - uses: gradle/gradle-build-action@v3
+      - uses: gradle/actions/setup-gradle@v3
+        with:
+          validate-wrappers: true
 
       - name: Build with Gradle
         run: ./gradlew build --stacktrace
