--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+plugins {
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.compose.compiler) apply false
+    alias(libs.plugins.dokka) apply false
+    alias(libs.plugins.publish) apply false
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
